# project-k

./: .gitignore  AGENTS.md  main.py  pyproject.toml  requirements.txt
docs/: agent-workflow.md  project-principles.md  refactoring-policy.md  security-and-trust.md  stdlib-policy.md  threat-model.md
src/project_k/: __init__.py
src/project_k/core/: __init__.py  models.py  policy.py  router.py
src/project_k/interfaces/: __init__.py  cli.py
tests/core/: test_router.py
tests/interfaces/: test_cli.py
