[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-k"
version = "0.1.0"
description = "Local-first hybrid multiagent routing prototype."
readme = "README.md"
requires-python = "==3.12.10"
dependencies = []

[project.scripts]
project-k = "project_k.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
